--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>hello, world</h1>
-    <p>Call me <name></p>
-    <p>I am studying <course> at <college></p>
+    <p>Call me harman</p>
+    <p>I am studying computer software and database development at lambton college</p>
   </body>
 </html>
