--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>hello, world</h1>
     <p>Call me <name></p>
-    <p>I am studying <course> at <college></p>
+    <p>I am studying csat at  lambton college</p>
   </body>
 </html>
